Remove second bootstrap.min script, fix navbar not collapsing

--- a/practice2_portfolio/src/scss/components/_buttons.scss
+++ b/practice2_portfolio/src/scss/components/_buttons.scss
@@ -2,6 +2,9 @@
 @use "../components/mixins" as *;
 
 .btn-rounded {
+  @include media-breakpoint-down(sm) {
+    display: none;
+  };
   position: relative;
   padding: 0.9375rem 3.25rem 0.9375rem 1.2rem;
   font-weight: 700;
